--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,9 +15,24 @@ html {
  */
 
 body {
+  display:flex;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  flex-direction:column;
+  align-items: center;
+}
+
+
+main {
+  display: flex;
+  width: 90%;
+  background-color: #f4f1ec;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /*
