--- a/public/styles/article-tweets.css
+++ b/public/styles/article-tweets.css
@@ -1,4 +1,67 @@
-.icon {
-  color:#4056A1;
+.tweetsContainer {
+  width:100%;
 }
 
+.tweets {
+  display:flex;
+  flex-direction:column;
+  border: 2px solid black;
+  width:90%;
+  padding: 2px;
+  margin: 2px;
+}
+
+.tweets:hover {
+  box-shadow: 5px 10px aqua;
+}
+
+
+header.tweets-header {
+  display:flex;
+  justify-content:space-between;
+  flex-direction: row;
+
+}
+
+header.tweets-header-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.text {
+  border-bottom: 3px solid #000;
+}
+
+.userAccount {
+  color:lightgrey;
+  font-size: 20px;
+}
+
+footer {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.icon {
+  display:flex;
+}
+.icon i:hover {
+  color:goldenrod;
+}
+
+.icon i {
+  color:#4056A1;
+  justify-content: flex-end;
+}
+
+footer p {
+  justify-content: flex-start;
+
+}
+
+.footerDisplay {
+  flex-direction: column;
+
+}
