--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,3 +8,10 @@ body > header {
   flex-direction: column;
   background-image: url("https://www.transparenttextures.com/patterns/fake-luxury.png");
 }
+
+#header-avatar {
+  height: 140px;
+  justify-self: center;
+  margin-top:40px;
+  margin-bottom: 5px;
+}
