--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,10 +2,13 @@
   display: flex;
   flex-direction: column;
   width: 90%;
+  position:sticky;
+  top:200;
 }
 
 label {
   float: left;
+  border: 1px solid black;
 }
 
 button {
