--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,12 +6,13 @@ body > header {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  font-weight: 900;
   background-image: url("https://www.transparenttextures.com/patterns/fake-luxury.png");
 }
 
 #header-avatar {
-  height: 140px;
+  height: 160px;
   justify-self: center;
-  margin-top:40px;
-  margin-bottom: 5px;
+  margin-top:100px;
+  margin-bottom: 20px;
 }
