--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -20,9 +20,10 @@ nav {
   padding-right: 1.5em;
   display: flex;
   flex-direction: column;
+  font-size: 18px;
 }
 
 nav i {
-  padding-left: 80px;
+  padding-left: 60px;
   color: red;
 }
