--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -39,3 +39,14 @@ main {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ @media only screen and (min-width: 1024px) {
+   body {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-around;
+   }
+   main {
+     margin-top: 120px;
+     width:50%;
+   }
+ }
