--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -4,8 +4,8 @@
   width: 90%;
   position:sticky;
   top:200;
-  padding-bottom: 50px;
-  margin-top:60px;
+  padding-bottom: 10px;
+  margin-top:40px;
 }
 
 label {
@@ -16,6 +16,8 @@ label {
   margin-top: 10px;
   margin-bottom: 10px;
   padding:5px;
+  font-size: 18px;
+  font-weight: 900;
 }
 
 button {
