--- a/public/styles/article-tweets.css
+++ b/public/styles/article-tweets.css
@@ -7,7 +7,8 @@
   display:flex;
   flex-direction:column;
   padding: 10px;
-  margin: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   border: 3px solid black;
   width: 100%;
 }
