--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -19,7 +19,8 @@
 
 @media only screen and (min-width: 1024px) {
   .main-header {
-    margin-top:70px;
+    margin-top:-90px;
+    margin-left:70px;
     width:30%;
     height: 80%;
     display:flex;
@@ -27,10 +28,10 @@
   }
   #header-avatar {
     margin-top:60px;
-    margin-bottom:40px;
+    margin-bottom:20px;
   }
-  #name {
-    padding-bottom:20px ;
+  .name {
+    padding-bottom:40px ;
   }
 
 }
