--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,7 @@ nav {
   z-index: 9999;
   position:fixed;
   top:0;
+  padding: 5px;
 }
 
 
@@ -27,6 +28,10 @@ nav {
 nav i {
   padding-left: 60px;
   color: red;
+}
+
+.newTweet:hover {
+  color:purple;
 }
 
 @media only screen and (max-width: 1023px) {
