added toggle 2 and nav arrow animation

--- a/public/styles/article-tweets.css
+++ b/public/styles/article-tweets.css
@@ -86,3 +86,14 @@ footer p {
   align-items:center;
 
 }
+
+#back-top {
+  bottom:0;
+  right:0;
+  position:fixed;
+  font-size: 30px;
+  color:red;
+}
+#back-top:hover {
+  color:goldenrod;
+}
