--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -28,7 +28,22 @@ nav {
 nav i {
   padding-left: 60px;
   color: red;
+  transform: translatey(0px);
+	animation: float 4s ease-in-out infinite;
 }
+
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(10px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
+
 
 .newTweet:hover {
   color:purple;
