--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -40,11 +40,13 @@ main {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
  @media only screen and (min-width: 1024px) {
    body {
      display: flex;
      flex-direction: row;
      justify-content: space-around;
+     align-items: flex-start;
    }
    main {
      margin-top: 120px;
